--- a/src/components/styles/gestionCaja.css
+++ b/src/components/styles/gestionCaja.css
@@ -37,11 +37,11 @@
 
 .historial-cajas th,
 .historial-cajas td {
-  border: 1px solid #ddd;
+  border: 1px solid #dddddd;
   padding: 8px;
   text-align: left;
 }
 
 .historial-cajas th {
-  background-color: #f2f2f2;
+  background-color: #0ba10b;
 }
