--- a/src/components/styles/login.css
+++ b/src/components/styles/login.css
@@ -17,6 +17,11 @@
     border-radius: 100%;
   }
   
+.logo{
+    height: 25%;
+    border-radius: 50%;
+  }
+
   @keyframes spin {
     from {
       transform: rotate(1deg);
