--- a/src/components/styles/bicicletas.css
+++ b/src/components/styles/bicicletas.css
@@ -73,8 +73,8 @@
 
 .bicicleta-image {
   display: flex;
-  justify-content: center; /* Centrar horizontalmente */
-  align-items: center; /* Centrar verticalmente */
+  justify-content: center; 
+  align-items: center;
   height: 17vh;
   overflow: hidden;
 }
