--- a/src/components/styles/inicio.css
+++ b/src/components/styles/inicio.css
@@ -1,4 +1,3 @@
-/* Asegura que todo el cuerpo de la página no tenga margen ni padding */
 body, html {
   margin: 0;
   padding: 0;
@@ -7,7 +6,7 @@ body, html {
 }
 
 .cont {
-  height: 100vh; /* Ocupa toda la altura de la pantalla */
+  height: 100vh; 
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,7 +27,7 @@ body, html {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Ajusta la imagen para cubrir todo el contenedor sin distorsionar */
+  object-fit: cover; 
   z-index: 1;
 }
 
