--- a/src/components/styles/producto.css
+++ b/src/components/styles/producto.css
@@ -30,11 +30,10 @@
   background-color: #45a049;
 }
 
-/* Estilos para el buscador */
 .buscar-producto {
   display: flex;
   align-items: center;
-  margin: 0 20px; /* Espaciado lateral */
+  margin: 0 20px;
   margin-left: 240px;
 }
 
@@ -42,8 +41,8 @@
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 4px;
-  margin-left:8px; /* Espaciado entre el icono y el input */
-  flex: 1; /* Para que ocupe el espacio disponible */
+  margin-left:8px; 
+  flex: 1; 
   width: 350px;
 }
 
@@ -53,7 +52,7 @@
 }
 
 .ordenar select {
-  margin-left: 10px; /* Espaciado entre el select y el icono */
+  margin-left: 10px; 
   padding: 8px;
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -85,8 +84,8 @@
 
 .accesorio-image {
   display: flex;
-  justify-content: center; /* Centrar horizontalmente */
-  align-items: center; /* Centrar verticalmente */
+  justify-content: center; 
+  align-items: center; 
   height: 17vh;
   overflow: hidden;
 }
@@ -183,7 +182,7 @@
   margin-top: 20px;
 }
 
-/* Modal responsive */
+
 @media (max-width: 768px) {
   .formulario-dos-columnas {
     flex-direction: column;
